k8s/app_go/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-go-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app-container
        image: spaghettic0der/moscow-time-go:latest
        ports:
        - containerPort: 8000
