k8s/app_go/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-go-service
spec:
  selector:
    app: go-app
  ports:
  - protocol: TCP
    port: 9200
    targetPort: 8000
  type: NodePort
