k8s/app_go/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app-go.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-go-service
            port:
              number: 9200
